--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,5 @@ main/Modello/var_sel.stan
 main/Modello/base.stan
 main/Modello/base.hpp
 main/Modello/base.exe
-
+main/Datasets/Residuals_180.csv
+main/Datasets/Residuals_120.csv
