--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ main/Modello/.ipynb_checkpoints/
 main/Modello/base.exe
 main/Modello/base.hpp
 main/Modello/base.stan
+main/Datasets/Residuals_180.csv
+main/Datasets/Residuals_120.csv
