--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ main/Modello/base.hpp
 main/Modello/base.stan
 main/Datasets/Residuals_180.csv
 main/Datasets/Residuals_120.csv
+main/Modello/base.hpp
+main/Modello/base.stan
+main/Modello/base.exe
