--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ main/Modello/.ipynb_checkpoints/
 main/Modello/stan/
 main/Datasets/Residuals_180.csv
 main/Datasets/Residuals_120.csv
+main/Datasets/eta_180.csv
 main/Modello/base.hpp
 main/Modello/base.stan
 main/Modello/base.exe
