--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,7 @@ main/Modello/.ipynb_checkpoints/
 main/Modello/stan/
 main/Modello/stan120/
 main/Modello/stan180/
-main/Datasets/res_180.csv
-main/Datasets/res_120.csv
-main/Datasets/eta_180.csv
-main/Datasets/eta_120.csv
+main/Datasets/Space_estimate/
 main/Modello/base.hpp
 main/Modello/base.stan
 main/Modello/base.exe
