reorganized stan directory and notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -4,20 +4,12 @@
 .Ruserdata
 .RdataTmp
 .vscode
-.exe
-.hpp
-main/Dati_iniziali/datasetO3.csv
-main/Dati_iniziali/stazioni_O3.csv
+main/Dati_iniziali
 Theory/
 .DS_Store
 main/.DS_Store
 main/Dati_iniziali/
 main/Modello/.ipynb_checkpoints/
-main/Modello/stan/
-main/Modello/stan120/
-main/Modello/stan180/
+main/Modello/stan/compiled
 main/Datasets/Space_estimate/
-main/Modello/base.hpp
-main/Modello/base.stan
-main/Modello/base.exe
 main/Modello/__pycache__/
