--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ main/Modello/.ipynb_checkpoints/
 main/Modello/stan/compiled
 main/Datasets/Space_estimate/
 main/Modello/__pycache__/
+Appunti.txt
